--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Bedil-bedilan.loader.js";
+      var loaderUrl = buildUrl + "/Bedil-bedilan-jawa timur.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Bedil-bedilan.data",
-        frameworkUrl: buildUrl + "/Bedil-bedilan.framework.js",
-        codeUrl: buildUrl + "/Bedil-bedilan.wasm",
+        dataUrl: buildUrl + "/Bedil-bedilan-jawa timur.data",
+        frameworkUrl: buildUrl + "/Bedil-bedilan-jawa timur.framework.js",
+        codeUrl: buildUrl + "/Bedil-bedilan-jawa timur.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "New Unity Project",
